--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Arimo:wght@400;500;600&family=PT+Serif&display=swap");
+@import url('https://unpkg.com/css.gg@2.0.0/icons/css/play-button-o.css');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+
 .App {
   text-align: center;
 }
@@ -53,7 +57,7 @@
   position: absolute;
   inset: 0px;
   border-radius: 50%;
-  border: 4px solid #531616;
+  border: 4px solid black;
   animation: prixClipFix 2s linear infinite ;
 }
 .loader::after{
@@ -73,3 +77,172 @@
     75%, 100%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
 }
 
+
+.movie-card {
+  --transition-duration: 700ms;
+  color: white;
+  position: relative;
+  border-radius: 0.6em;
+  overflow: hidden;
+  font-size: 120%;
+  max-width: 90vw;
+  height: min(21em, 90vh);
+  box-shadow: var(--shadow-lg), var(--shadow-lg), var(--shadow-lg);
+  transition: transform var(--transition-duration);
+}
+
+img {
+  height: 100%; 
+  width: 100%;
+  transition: filter var(--transition-duration);
+  object-fit: cover;
+  object-position: center;
+}
+
+
+.content {
+  position: relative; /* Добавляем позицию относительно */
+  z-index: 1;
+  position: absolute;
+  bottom: 10px;
+  left: 40px;
+  text-align: left;
+  transition: transform var(--transition-duration) var(--ease-in-out);
+}
+
+
+h1,
+.score,
+.infos {
+  transition: transform var(--transition-duration);
+}
+
+h1 {
+  font-size: 2.4em;
+  color: inherit;
+  margin: 0;
+  margin-bottom: 10px;
+  font-weight: 600;
+  font-family: "PT Serif", serif;
+}
+
+.information {
+  display: flex;
+  align-items: flex-end;
+  gap: 10px;
+}
+
+.infos {
+  font-size: 1em;
+  font-weight: 300;
+  color: #eee;
+  font-family: "Arimo", sans-serif;
+}
+
+.score {
+  font-size: 1.4em;
+  font-weight: 600;
+  color: #eee;
+  font-family: "Arimo", sans-serif;
+}
+
+.score p {
+  margin: 0;
+}
+
+.synopsis {
+  font-size: 0.9em;
+  line-height: 1.4;
+  margin-block: 0.75em;
+  opacity: 0;
+  transition: opacity 0.4s ease-in-out;
+  font-family: "Arimo", sans-serif;
+}
+
+.movie-card .main {
+  display: flex;
+  flex-direction: column;
+  transition: transform 0.5s ease-in-out;
+}
+
+.movie-card:hover img {
+  filter: brightness(60%) blur(3px);
+}
+
+.movie-card:hover .main {
+  transform: translateY(-30%);
+}
+
+.movie-card:hover .synopsis {
+  opacity: 1;
+  transition-delay: 0.3s;
+}
+
+.gradient-text {
+  background: linear-gradient(165deg, #ffd25e 16.44%, #b59646 63.42%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+
+@media screen and (max-width: 768px) {
+  .movie-card {
+    max-width: 90vw;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .movie-card {
+    max-width: 100vw;
+  }
+}
+
+.gg-play-button-o {
+  position: absolute;
+  top: 10px; 
+  right: 20%;
+  color: white;
+  font-size: 20em;
+  transition: opacity 0.4s ease-in-out;
+  opacity: 0;
+  transform: scale(var(--ggs,3));
+  max-width: 22px;
+  max-width: 22px;
+}
+
+.movie-card:hover .content .gg-play-button-o {
+  opacity: 1; /* Появление при наведении */
+}
+
+
+.gg-play-button-o:hover {
+  color: orange; 
+}
+
+
+/* This is My Link*/
+
+.fixed-link {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    padding: 10px;
+    width: 100%;
+    text-align: center;
+      background-color: rgba(105, 105, 105, 0.1);
+    backdrop-filter: blur(6px); /* blur*/
+}
+
+.fixed-link a {
+    color: white;
+    font-family: "Roboto Flex", sans-serif;
+    text-transform: uppercase;
+    font-size: 12pt;
+    font-weight: 200;
+    text-decoration: none;
+}
+.maincard{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
